# creedandbear_test

./: .gitignore  CMakeLists.txt  README.md
app/: main_ordersManager.cpp
code/header/: OrdersManager_2_simpleSharedList.h  OrdersManager_3_bufferedWriteSharedList.h  ordersManager.h  ordersManager_0_base.h  ordersManager_1_bufferedDb.h  ordersManager_1_bufferedSave.h  ordersManager_2_sharedList.h  ordersManager_3_sharedList_BufferedList.h  ordersManager_4_sharedList_BufferedList_BufferedDb.h  ordersManager_5_perThreadList_BufferedList_BufferedDb.h
code/header/ordersManager/: order.h  ordersManager.h  ordersManager_0_base.h  ordersManager_1_bufferedDb.h  ordersManager_2_sharedList.h  ordersManager_3_sharedList_BufferedList.h  ordersManager_4_sharedList_BufferedList_BufferedDb.h  ordersManager_5_perThreadList_BufferedList_BufferedDb.h
code/src/: main_ordersManager.cpp  ordersManager.cpp  ordersManager_0_base.cpp  ordersManager_1_bufferedDb.cpp  ordersManager_1_bufferedSave.cpp  ordersManager_2_sharedList.cpp  ordersManager_2_simpleSharedList.cpp  ordersManager_3_bufferedWriteSharedList.cpp  ordersManager_3_sharedList_BufferedList.cpp  ordersManager_4_sharedList_BufferedList_BufferedDb.cpp  ordersManager_5_perThreadList_BufferedList_BufferedDb.cpp  testOrdersManager.cpp  testOrdersManager_0_base.cpp
code/src/ordersManager/: order.cpp  ordersManager.cpp  ordersManager_0_base.cpp  ordersManager_1_bufferedDb.cpp  ordersManager_2_sharedList.cpp  ordersManager_3_sharedList_BufferedList.cpp  ordersManager_4_sharedList_BufferedList_BufferedDb.cpp  ordersManager_5_perThreadList_BufferedList_BufferedDb.cpp
resource/: algorithm_5_architecture  algorithmicComplexity  plotScript.ipynb
test/: sharedTestRoutine.h
test/ordersManager/: test_ordersManager_0_base.cpp  test_ordersManager_1_bufferedDb.cpp  test_ordersManager_2_sharedList.cpp  test_ordersManager_3_sharedList_BufferedList.cpp  test_ordersManager_4_sharedList_BufferedList_BufferedDb.cpp  test_ordersManager_5_perThreadList_BufferedList_BufferedDb.cpp
